# olio-ohjelmointi

./: .gitignore.txt  README.md
H1/: main.cpp
H2a/: CMakeLists.txt  Car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
H2b/: car.cpp  car.h  main.cpp
H3a/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
H3b/: animal.h  dog.h  main.cpp
H4/: CMakeLists.txt  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
H5/: CMakeLists.txt  aggregationa.cpp  aggregationa.h  assosiationa.cpp  assosiationa.h  classb.cpp  classb.h  main.cpp
H6A/: main.cpp
H6B/: H6B.pro  exampleclass.cpp  exampleclass.h
H7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
