cmake_minimum_required(VERSION 3.5)

project(H5 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(H5 main.cpp
    classb.h classb.cpp
    assosiationa.h assosiationa.cpp
    aggregationa.h aggregationa.cpp)

include(GNUInstallDirs)
install(TARGETS H5
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
